# nt_perform_vst

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
scripts/: release-notes.sh  windows-installer.nsi
src/: PerfPageParam.cpp  PerfPageParam.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/model/: PerformPageModel.cpp  PerformPageModel.h
src/protocol/: CcReverseLookup.cpp  CcReverseLookup.h  DistingNTProtocol.cpp  DistingNTProtocol.h  SysExQueue.cpp  SysExQueue.h
src/ui/: EncoderComponent.cpp  EncoderComponent.h  PageSelectorComponent.cpp  PageSelectorComponent.h  PotComponent.cpp  PotComponent.h  StatusBarComponent.cpp  StatusBarComponent.h
